Estoy agregando un nuevo componente para poner rangos de hora y haciendo un crud para los drivers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
       "@user/*": ["src/app/utils/modules/user/*"],
       "@catalogues/*": ["src/app/utils/modules/catalogues/*"],
       "@providersModule/*": ["src/app/providersModule/*"],
+      "@product/*":["src/app/products/*"],
+      "@station/*":["src/app/station/*"],
+      "@drivers/*":["src/app/drivers/*"],
       "@env/*": ["src/environments/*"],
     },
     "strict": true,
